tests/lean/def2.lean.expected.out
def2.lean:3:11: error: definition 'foo' is noncomputable, it depends on 'val'
